--- a/public/css/azustyle.css
+++ b/public/css/azustyle.css
@@ -31,3 +31,22 @@
 li {
     list-style: none;
 }
+
+.main-primary {
+    color: #92140c;
+}
+
+.loginbutton {
+    background-color: #92140c;
+    color: white;
+}
+
+.loginbutton:hover {
+    background-color: #c71e1e;
+    color: white;
+}
+
+.loginbutton:active {
+    background-color: #410c08 !important;
+    color: white !important;
+}
